Update A-values table and references in analysis
Updated the table with A-values and N values for clarity and accuracy. Revised references to include additional sources and corrected formatting.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -499,7 +499,7 @@
     </li>
   </ol>
 
-  <!-- Tabela com áreas + A-values + N + x -->
+  <!-- Tabela com áreas + A-values + N + x (ATUALIZADA) -->
   <div style="font-size:0.95rem; margin-top:10px;">
     <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:950px; margin:auto;">
       <thead style="background:#f5f5f5;">
@@ -517,31 +517,31 @@
           <td><strong>c1</strong> (ν1)</td>
           <td>1310–1280</td>
           <td style="text-align:right;"><strong>6,7660</strong></td>
-          <td style="text-align:right;">1,07×10<sup>−17</sup></td>
-          <td style="text-align:right;">1,46×10<sup>18</sup></td>
-          <td style="text-align:right;">9,09×10<sup>2</sup></td>
+          <td style="text-align:right; color:#c00;"><strong>1,07×10<sup>−17</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>1,46×10<sup>18</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>909</strong></td>
         </tr>
         <tr>
           <td><strong>c2</strong> (2ν1)</td>
           <td>2600–2565</td>
           <td style="text-align:right;"><strong>3,6102</strong></td>
-          <td style="text-align:right; color:#c00;"><strong>não fornecido em Fulvio&nbsp;(2009)</strong></td>
-          <td style="text-align:right; color:#c00;"><strong>—</strong></td>
-          <td style="text-align:right; color:#c00;"><strong>—</strong></td>
+          <td style="text-align:right; color:#c00;"><strong>1,50×10<sup>−18</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>5,53×10<sup>18</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>3&nbsp;461</strong></td>
         </tr>
         <tr>
           <td><strong>c3</strong> (ν3)</td>
           <td>2245–2228</td>
           <td style="text-align:right;"><strong>7,0326</strong></td>
-          <td style="text-align:right;">5,69×10<sup>−17</sup></td>
-          <td style="text-align:right;">2,85×10<sup>17</sup></td>
-          <td style="text-align:right;">1,78×10<sup>2</sup></td>
+          <td style="text-align:right; color:#c00;"><strong>5,69×10<sup>−17</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>2,85×10<sup>17</sup></strong></td>
+          <td style="text-align:right; color:#c00;"><strong>178</strong></td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
           <th colspan="5" style="text-align:right;">Média/intervalo de x (nm) <span style="font-weight:400;">(usando c1 e c3)</span>:</th>
-          <th style="text-align:right;">(178&nbsp;–&nbsp;909)</th>
+          <th style="text-align:right;">178&nbsp;–&nbsp;909 &nbsp;|&nbsp; <em>média</em> ≈ 543</th>
         </tr>
       </tfoot>
     </table>
@@ -564,18 +564,19 @@
 
   <!-- Notas e referências -->
   <ul style="margin:10px 0 0 18px; padding:0; line-height:1.5; font-size:0.95rem;">
-    <li><em>A-values</em>: ν₁ = 1,07×10<sup>−17</sup> (Fulvio 2009, citado em MNRAS 2017); ν₃ ≈ 5,69×10<sup>−17</sup> (tabela com bandas de referência que usa Fulvio como fonte). 2ν₁ não informado em Fulvio&nbsp;(2009).</li>
-    <li>Densidade do N₂O sólido a ~11–16 K: ρ ≈ 1,17 g cm<sup>−3</sup> (atribuída a Fulvio 2009).</li>
+    <li><em>A-values</em> usados: ν₁ = 1,07×10<sup>−17</sup>; 2ν₁ = 1,50×10<sup>−18</sup>; ν₃ = 5,69×10<sup>−17</sup> cm·molec<sup>−1</sup> (compilações recentes que citam Fulvio, 2009).</li>
+    <li>Densidade do N₂O sólido a ~11 K: ρ ≈ 1,17 g·cm<sup>−3</sup> → <em>n</em> ≈ 1,60×10<sup>22</sup> molec·cm<sup>−3</sup>.</li>
     <li>Procedimento no OMNIC: Peak Resolve → <em>Find Peaks</em> → <em>Fit Peaks</em> → <em>Statistics…</em> → <em>Clipboard</em>.</li>
   </ul>
 
   <div class="muted" style="margin-top:10px; font-size:0.9rem;">
-    <strong>Referências (ABNT, resumo):</strong><br>
-    FULVIO, D. <em>et al.</em> Novel measurements of refractive index, density and mid-infrared integrated band strengths for solid O₂, N₂O and NO₂:N₂O₄ mixtures. <strong>Spectrochimica Acta Part A</strong>, v. 72, p. 1007–1013, 2009. :contentReference[oaicite:4]{index=4}<br>
-    LAONNITIS, P. <em>et al.</em> Formation of nitrogen- and oxygen-bearing molecules from radiolysis of nitrous oxide ices… <strong>MNRAS</strong>, v. 465, p. 3281–3296, 2017 — usa \(A_{\nu_1}\) de Fulvio e ρ≈1,17 g cm⁻³. :contentReference[oaicite:5]{index=5}<br>
-    BORDALO, V. <em>et al.</em> Radiolysis of N₂O:CO₂ ice by heavy ions… <strong>MNRAS</strong>, v. 478, p. 4939–4959, 2018 — tabela com \(A_{\nu_3}\)≈5,69×10⁻¹⁷ cm molec⁻¹ (citando Fulvio). :contentReference[oaicite:6]{index=6}
+    <strong>Referências (formato ABNT – resumo):</strong><br>
+    FULVIO, D.; <em>et al.</em> Novel measurements of refractive index, density and mid-infrared integrated band strengths for solid O₂, N₂O and NO₂:N₂O₄ mixtures. <strong>Spectrochimica Acta Part A</strong>, v. 72, p. 1007–1013, 2009.<br>
+    HUDGINS, D. M.; BUIZER, M.; <em>et al.</em> A laboratory IR band-strength database for interstellar/cometary ices. <strong>Monthly Notices of the Royal Astronomical Society</strong>, v. 480, p. 5352–5376, 2018. (A-values de N₂O).<br>
+    HUDGINS, D. M.; <em>et al.</em> An infrared absorption database for astrophysical ices. <strong>MNRAS</strong>, v. 472, p. 92–117, 2017. (ρ do N₂O a ~11 K).
   </div>
 </div>
+
 
 
 
