Update summary text for area calculation details

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -552,7 +552,7 @@
 
   <!-- Detalhe: como as áreas foram somadas -->
   <details style="margin-top:10px;">
-    <summary style="cursor:pointer;">Ver como somei as áreas (c1, c2, c3)</summary>
+    <summary style="cursor:pointer;">Ver como somei as áreas em negrito na tabela(c1, c2, c3)</summary>
     <div style="font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; font-size:0.92rem; white-space:pre-wrap; background:#fafafa; border:1px solid #eee; padding:8px; margin-top:6px;">
 <strong>c1 (1310–1280 cm⁻¹)</strong>
 Áreas: 3,6083 + 3,1577 = <strong>6,7660</strong>
