Change text color references in HTML table

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -519,7 +519,7 @@
         <tr>
           <td><strong>c1</strong> (ν1)</td>
           <td>1310–1280</td>
-          <td style="text-align:right;"><strong>6,7660</strong></td>
+          <td style="text-align:right;color:#006400;"><strong>6,7660</strong></td>
           <td style="text-align:right; color:#c00;"><strong>1,07×10<sup>−17</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>1,46×10<sup>18</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>909</strong></td>
@@ -527,7 +527,7 @@
         <tr>
           <td><strong>c2</strong> (2ν1)</td>
           <td>2600–2565</td>
-          <td style="text-align:right;"><strong>3,6102</strong></td>
+          <td style="text-align:right;color:#006400;"><strong>3,6102</strong></td>
           <td style="text-align:right; color:#c00;"><strong>1,50×10<sup>−18</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>5,53×10<sup>18</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>3&nbsp;461</strong></td>
@@ -535,7 +535,7 @@
         <tr>
           <td><strong>c3</strong> (ν3)</td>
           <td>2245–2228</td>
-          <td style="text-align:right;"><strong>7,0326</strong></td>
+          <td style="text-align:right;color:#006400;"><strong>7,0326</strong></td>
           <td style="text-align:right; color:#c00;"><strong>5,69×10<sup>−17</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>2,85×10<sup>17</sup></strong></td>
           <td style="text-align:right; color:#c00;"><strong>178</strong></td>
@@ -552,7 +552,7 @@
 
   <!-- Detalhe: como as áreas foram somadas -->
   <details style="margin-top:10px;">
-    <summary style="cursor:pointer;">Ver como somei as áreas <strong style="color:#c00;">em negrito</strong> na tabela (c1, c2, c3)</summary>
+    <summary style="cursor:pointer;">Ver como somei as áreas <strong style="color:#c00;">na cor verde</strong> na tabela (c1, c2, c3)</summary>
     <div style="font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; font-size:0.92rem; white-space:pre-wrap; background:#fafafa; border:1px solid #eee; padding:8px; margin-top:6px;">
 <strong>c1 (1310–1280 cm⁻¹)</strong>
 Áreas: 3,6083 + 3,1577 = <strong>6,7660</strong>
@@ -568,7 +568,7 @@
 
 <!-- Como cheguei aos valores em vermelho (A-values, N e x) -->
 <details style="margin-top:10px;">
-  <summary style="cursor:pointer;">Ver como obtive os <span style="color:#c00;font-weight:700;">valores em vermelho</span> (A-values, N e x)</summary>
+  <summary style="cursor:pointer;">Ver como obtive os <span style="color:#c00;font-weight:700;">valores na cor vermelha</span> (A-values, N e x)</summary>
 
   <div style="background:#fafafa;border:1px solid #eee;padding:10px;line-height:1.6;font-size:0.95rem;">
     <ol style="margin:0 0 8px 18px;">
